Fixed Sign Up and Login pages(spacing and border radius)

--- a/assets/css/signup-company.css
+++ b/assets/css/signup-company.css
@@ -62,6 +62,7 @@ button{
 
 .signup input:not([type=checkbox]){
     border: 1px solid rgba(155, 155, 155, 0.3);
+    border-radius: 3px;
     width: 100%;
     height: 30px;
     display: block;
@@ -221,6 +222,7 @@ button{
 .forgot-password + hr{
     width: auto;
     margin-left: 0;
+    margin-bottom: 2.5rem;
     height: 1px;
     background-color: #E2E1E7;
     border: none;
