--- a/assets/css/verifyNumber.css
+++ b/assets/css/verifyNumber.css
@@ -215,7 +215,8 @@ a.hoverme:hover{
 }
 
 
-@media(max-width: 1500px){
+@media(max-width: 1300px){
+
     .container{
         padding: 2rem;
         height: 100vh;
@@ -243,13 +244,13 @@ a.hoverme:hover{
     }
 
     .Lead-text{
-        font-size: 1.8rem;
+        font-size: 1.3rem;
         margin-bottom: 2rem;
     }
 
     .Verification-form{
         flex-basis: 60%;
-        padding-top: 5rem;          
+        padding-top: 2rem;    
         margin-left: 6rem;
     }
 
@@ -258,9 +259,9 @@ a.hoverme:hover{
     }
 
     .form-heading{
-        margin-top: 10rem;
-        margin-bottom: 6rem;
-        font-size: 2.5rem;
+        margin-top: 6rem;
+        margin-bottom: 3em;
+        font-size: 1.8rem;
     }
 
     img{
@@ -272,7 +273,7 @@ a.hoverme:hover{
     }
 
     .footer-paragraph{
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
 
     .Verification-failed{
@@ -288,21 +289,22 @@ a.hoverme:hover{
     }
 
     .form-heading{
-        font-size: 2.9rem;
+        font-size: 2.1rem;
+        margin-bottom: 2rem;
     }
 
     .Lead-text{
-        font-size: 1.8rem;
+        font-size: 1.5rem;
         margin-bottom: 4.3rem;
     }
 
     .Verification-failed{
-        font-size: 1.7rem;
+        font-size: 1.3rem;
     }
 
     .Verification-submit{
-        font-size: 1.7rem;
-        padding: 2rem;
+        font-size: 1.5rem;
+        padding: 1.8rem;
         margin-bottom: 5rem;
     }
 
@@ -314,14 +316,14 @@ a.hoverme:hover{
     }
 
     .Verification-form{
-        margin-top: -10rem;
+        margin-top: -3rem;
         margin-left: 0;
         flex-basis: 100%;
     }
 
     .Verification-input{
-        padding: 1.9rem 1.5rem;
-        font-size: 2rem;
+        padding: 0.9rem 1.5rem;
+        font-size: 1.5rem;
         margin-bottom: 4rem;
     }
 
@@ -331,7 +333,7 @@ a.hoverme:hover{
 
 
     .footer-paragraph{
-        font-size: 1.6rem;
+        font-size: 1.3rem;
     }
 
     img.success-image{
@@ -351,12 +353,12 @@ a.hoverme:hover{
     }
 
     .Lead-text{
-        font-size: 1.8rem;
+        font-size: 1.3rem;
         margin-bottom: 4.3rem;
     }
 
     .Verification-failed{
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
 
     .Verification-submit{
